Bug #1626 - Mobile > MOL/My Groups and Group Creation: subnav wrapping

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -155,6 +155,7 @@ blockquote {
             width: 60%;
             li{
                 display: block;
+                border-right: none;
                 a{
                     border-right: none;
                     padding: 0;
